--- a/config.yaml
+++ b/config.yaml
@@ -11,9 +11,9 @@ parsers:
     disabled: false
 
 exporters:
-  exporter_name: products_json # Must be unique
-  exporter_type: json
-  collection: products
-  write_mode: pretty_array # can be `line`,`pretty`, `pretty_array`, or `array`
-  offset: 0 # offset to where the exported record will start from
-  order: desc # can be ascending `asc` or descending `desc`
+  - exporter_name: products_json # Must be unique
+    exporter_type: json
+    collection: products
+    write_mode: pretty_array # can be `line`,`pretty`, `pretty_array`, or `array`
+    offset: 0 # offset to where the exported record will start from
+    order: desc # can be ascending `asc` or descending `desc`
